# pykg2tbl

./: .buildinfo  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  Metadata_scraping_summary.xlsx  README.rst  commitlint.config.js  custom_cmds.py  debug-logconf.yml  docker.md  genindex.html  index.html  index.rst  modules.html  objects.inv  py-modindex.html  pykg2tbl.html  pykg2tbl.j2.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: environment.pickle  index.doctree  modules.doctree  pykg2tbl.doctree  pykg2tbl.j2.doctree
.github/workflows/: build_pages.yml  pr_validation.yml  publish.yaml  python-app.yml  reviewers.yml
_sources/: index.rst.txt  modules.rst.txt
docs/: conf.py  index.rst  make.bat
docs/_static/: placeholder
docs/source/: conf.py  pykg2tbl.j2.rst  pykg2tbl.rst
pykg2tbl/: __init__.py  __main__.py  __version__.py  exceptions.py  extractor.py  kg2tbl.py  named_query.py  query.py  service.py  util.py
pykg2tbl/j2/: jinja_processor.py  jinja_sparql_builder.py
pykg2tbl/j2/templates/: all.sparql  bodc-find.sparql  bodc-listing.sparql  bodc_find.sparql  broader-terms.sparql  rdf-predicates-count.sparql  rdf-predicates.sparql  rdf-types.sparql  skos-collection-member-count.sparql  skos-collection.sparql  skos-depth-ip-ban-risk.sparql  term-match-in-collection.sparql  term-match-prop-path.sparql
pykg2tbl/sparql_templates/: all.sparql  rdf-predicates-count.sparql  rdf-predicates.sparql  skos-collection.sparql
tests/: const.py  test_bodc_queries.py  test_cli.py  test_demo.py  test_j2sparql.py  test_kg2tbl.py  test_named_query.py  test_query.py  test_service.py  util4tests.py
tests/data/: fake-dump.ttl
tests/j2/: const.py  test_j2sparql.py
tests/sources/: 01-persons-shape.ttl  02-person.ttl  query_result.json
tests/sources/bodc/: 20230605-P06-dump.ttl  fake-dump.ttl
tests/sparql_templates/: all.sparql  bodc_find.sparql  rdf-predicates.sparql  rdf-types.sparql
