[tool.poetry]
name = "pykg2tbl"
version = "0.0.2"
description = "Py Project to extract table data from knowwledge-graphs using sparql templates"
authors = [
        "Marc Portier <marc.portier@gmail.com>", 
        "Cedric Decruw <cedricdecruw@gmail.com>"]
maintainers = ["João dos Santos <jotaflame@gmail.com>"]
readme = "README.rst"
packages = [{include = "pykg2tbl"}]
license = "MIT"
repository = "https://github.com/vliz-be-opsci/pykg2tbl"
classifiers = [
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.8.1"
rdflib = "*"
sparqlwrapper = "*"
argparse = "*"
validators = "*"
pandas = "*"
pyrdfj2 = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
poetry = "*"
pre-commit = "*"
isort = "*"
black = "*"
flake8 = "*"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pyyaml = "*"
pytest = "*"
coverage = "*"
python-dotenv = "*"
pytest-cov = "*"

[tool.poetry.scripts]
pykg2tbl = "pykg2tbl.__main__:main"

[build-system]
requires = ["setuptools","poetry"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = ["tests",]
pythonpath = ["."]
